[workspace]
members = [
  "graph/",
]
exclude = []

[package]
name = "aigraph1"
version = "0.1.0"
edition = "2021"

description = "Graph serching algorithms"
license = "MIT"
repository = "https://github.com/AOx0/aigraph1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aigraph1"
path = "src/main.rs"

[dependencies]
graph = { path = "graph/" }
anyhow = "1.0.69"
log = "0.4.17"
wasm-logger = "0.2.0"
leptos = { version = "0.2.4", features = ["stable"] }
fdg-img.workspace = true

[workspace.dependencies]
fdg-img = { path = "fdg/fdg-img/" }
fdg-sim = { path = "fdg/fdg-sim/" }
