[workspace]
members = [
  "graph/",
]
exclude = []

[package]
name = "aigraph1"
version = "0.1.0"
edition = "2021"

description = "Graph serching algorithms"
license = "MIT"
repository = "https://github.com/AOx0/aigraph1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aigraph1"
path = "src/main.rs"

[dependencies]
graph = { path = "graph/" }
anyhow = "1.0.69"
plotters = "0.3.4"
fdg-sim.workspace = true
leptos.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true

[workspace.dependencies]
fdg-sim = { git = "https://github.com/grantshandy/fdg" }
leptos = { version = "0.2.4", features = ["stable"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["HtmlDocument", "Storage", "Window", "HtmlCollection", "DomTokenList", "Element"] }
