[workspace]
members = [
  "graph/",
]
exclude = []

[package]
name = "aigraph1"
version = "0.1.0"
edition = "2021"

description = "Graph serching algorithms"
license = "MIT"
repository = "https://github.com/AOx0/aigraph1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aigraph1"
path = "src/main.rs"

[dependencies]
graph = { path = "graph/", features = ["wasm"] }
anyhow = "1.0.69"
plotters = "0.3.4"
leptos.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
async-std = "1.12.0"

[workspace.dependencies]
leptos = { version = "0.2.4", features = ["stable"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["HtmlDocument", "Storage", "Window", "HtmlCollection", "DomTokenList", "Element"] }
glam = "0.23.0"
