[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
unicase = "2.6.0"
fixedbitset = "0.4.2"
num = "0.4.0"
fdg-sim.workspace = true

[dev-dependencies]
iai = { git = "https://github.com/AlexMikhalev/iai", branch = "memory_usage" }
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "iai_benchmarks"
harness = false

[[bench]]
name = "criterion_benchmarks"
harness = false
