[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
unicase = "2.6.0"
fixedbitset = "0.4.2"
num = "0.4.0"
glam.workspace = true
leptos = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
wasm-bindgen-futures = "0.4.34"
async-std = "1.12.0"
anyhow = "1.0.70"
getrandom = { version = "0.2.3", default-features = false }

[features]
default = ["getrandom/std"]
wasm = ["leptos", "wasm-bindgen", "js-sys", "web-sys", "getrandom/js"]

[dev-dependencies]
iai = { git = "https://github.com/AlexMikhalev/iai", branch = "memory_usage" }
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "iai_benchmarks"
harness = false

[[bench]]
name = "criterion_benchmarks"
harness = false
